--- a/flyway.conf
+++ b/flyway.conf
@@ -1,5 +1,5 @@
-flyway.user=root
-flyway.password=testeroot
-flyway.url=jdbc:mysql://localhost:3309/as_easyleiloes
+flyway.user=tg
+flyway.password=secret
+flyway.url=jdbc:mysql://localhost:3306/as_easyleiloes
 flyway.locations=filesystem:src/main/resources/db/migration
 flyway.cleanDisabled=false
