--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,8 @@ spring:
     password: secret
   flyway:
     locations: classpath:db/migration
+  webflux:
+    base-path: /auction-api
 
 logging:
   level:
