feat: 1. Start security 2. New Endpoint for get all products 3. new configs for Docker 4. Now migration and db suits the entire application.

--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  auction-service-mysql:
+  easy-auction-mysql:
     image: mysql:latest
     environment:
       MYSQL_DATABASE: as_easyleiloes
